--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
 
 <body class="container">
     <header class="fw-bold bg-light  pt-4 pb-5 text-center headerSection">
-        <h1>Mobile Giz<span><img class="gizzard" src="./icons/thunderbolt.png" alt=""></span>ard</h1>
+        <!-- site name  -->
+        <h1>
+            Mobile Giz<span><img class="gizzard" src="./icons/thunderbolt.png" alt=""></span>ard
+        </h1>
+        <!-- search bar  -->
         <nav class="navbar navbar-light ">
             <div class="d-flex mx-auto w-75">
 
