--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
         <section id="error" class="errorSection">
 
         </section>
+        <section id="noResult" class="noResultSection">
+
+        </section>
 
 
         <section id="allMobiles" class="row my-5 d-flex align-items-center">
