detail section updated

--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
     <!-- Result Section -->
     <main class=" mainSection">
 
-        <section id="error" class="errorSection">
+        <section id="error" class="errorSection text-muted">
 
         </section>
-        <section id="noResult" class="noResultSection">
+        <section id="noResult" class="noResultSection text-muted">
 
         </section>
 
@@ -63,6 +63,14 @@
                         <div class="modal-body" id="displayDetails">
 
                         </div>
+                        <div class="container" id="sensorsSection">
+                            <h5>Sensors</h5>
+                            <hr>
+                        </div>
+                        <!-- <div class="container" id="otherDetailSection">
+                            <h5>Others</h5>
+                            <hr>
+                        </div> -->
 
                     </div>
                 </div>
