--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 </head>
 
 <body class="container">
+    <!-- header section  -->
     <header class="fw-bold bg-light  pt-4 pb-5 text-center headerSection">
         <!-- site name  -->
         <h1>
@@ -38,18 +39,26 @@
 
     <!-- Result Section -->
     <main class=" mainSection">
-
+        <!-- no input section  -->
         <section id="error" class="errorSection text-muted">
 
         </section>
+
+        <!-- no Result found section  -->
         <section id="noResult" class="noResultSection text-muted">
 
         </section>
 
-
+        <!-- all mobile found section  -->
         <section id="allMobiles" class="row my-5 d-flex align-items-center">
 
         </section>
+
+
+
+
+
+        <!-- Mobile details section  -->
         <!-- modal  -->
         <section>
             <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
@@ -72,10 +81,7 @@
                             id="sensorsSection">
 
                         </div>
-                        <!-- <div class="container" id="otherDetailSection">
-                            <h5>Others</h5>
-                            <hr>
-                        </div> -->
+
 
                     </div>
                 </div>
