--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mobile Gizzard</title>
+    <!-- fav icon  -->
+    <link rel="shortcut icon" href="./icons/smartphone.png" type="image/x-icon">
 
     <!-- CSS link  -->
     <link rel="stylesheet" href="./style.css">
