--- a/index.html
+++ b/index.html
@@ -39,6 +39,15 @@
         </nav>
     </header>
 
+    <!-- Spinner section  -->
+    <div id="spinner" class="text-center py-5">
+
+        <div class="spinner-border text-warning" style="width: 4rem; height: 4rem" role="status">
+            <span class="visually-hidden">Loading...</span>
+        </div>
+    </div>
+
+
     <!-- Result Section -->
     <main class=" mainSection">
         <!-- no input section  -->
